Git - Fix text alignment for Sync button (#158167)
Sync button - fix text alignment

--- a/src/vs/workbench/contrib/scm/browser/media/scm.css
+++ b/src/vs/workbench/contrib/scm/browser/media/scm.css
@@ -211,7 +211,6 @@
 .scm-view .button-container > .monaco-description-button {
 	flex-direction: row;
 	flex-wrap: wrap;
-	height: 30px;
 	padding: 0 4px;
 	overflow: hidden;
 }
